--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -20,6 +20,7 @@
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
     "rc": "~0.5.0",
+    "request": "^2.69.0",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0"
   },
