--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -2,7 +2,8 @@
   "name": "production-map-base-agent",
   "version": "0.1.2",
   "scripts": {
-    "start": "forever start ./bin/www 8090"
+    "start": "forever start ./bin/www 8090",
+    "debug": "DEBUG=production-map-base-agent:* node ./bin/www 8090"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
