--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -6,14 +6,17 @@
     "debug": "DEBUG=production-map-base-agent:* node ./bin/www 8090"
   },
   "dependencies": {
+    "aws-sdk": "^2.2.41",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "multer": "^1.1.0",
     "q": "^1.4.1",
     "request": "^2.69.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "unzip": "^0.1.11"
   }
 }
