--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -18,6 +18,7 @@
     "q": "^1.4.1",
     "request": "^2.69.0",
     "serve-favicon": "~2.3.0",
+    "superagent": "^1.8.3",
     "unzip": "^0.1.11"
   }
 }
