--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -11,6 +11,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "diskspace": "^1.0.3",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "mkdirp": "^0.5.1",
