--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -18,6 +18,7 @@
     "mkdirp": "^0.5.1",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
+    "mysql": "^2.12.0",
     "q": "^1.4.1",
     "request": "^2.69.0",
     "serve-favicon": "~2.3.0",
