mysql: add support for running sql file

--- a/production-map-base-agent/libs/mySQL/config.json
+++ b/production-map-base-agent/libs/mySQL/config.json
@@ -34,6 +34,38 @@
                 "type": "string"
               }
             ]
+        },
+        {
+          "name": "executeSQLFile",
+          "viewName": "execute sql file",
+          "params":
+            [
+              {
+                "name": "filePath",
+                "viewName": "sql file path",
+                "type": "string"
+              },
+              {
+                "name": "host",
+                "viewName": "hostname",
+                "type": "string"
+              },
+              {
+                "name": "user",
+                "viewName": "user",
+                "type": "string"
+              },
+              {
+                "name": "password",
+                "viewName": "password",
+                "type": "string"
+              },
+              {
+                "name": "db",
+                "viewName": "database",
+                "type": "string"
+              }
+            ]
         }
       ]
 }
