--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "diskspace": "^1.0.3",
     "express": "~4.13.1",
+    "external-ip": "^0.2.4",
     "ip": "^1.1.3",
     "jade": "~1.11.0",
     "mkdirp": "^0.5.1",
