--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -16,6 +16,7 @@
     "external-ip": "^0.2.4",
     "ip": "^1.1.3",
     "jade": "~1.11.0",
+    "lodash": "^4.17.2",
     "mkdirp": "^0.5.1",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
