plugins: remove agents computation to external process

--- a/production-map-base-agent/libs/mySQL/config.json
+++ b/production-map-base-agent/libs/mySQL/config.json
@@ -1,7 +1,8 @@
 {
     "type": "MySQL",
     "imgUrl": "img/agents/MySQL.png",
-    "main": "app.js",
+    "execProggram": "python",
+    "main": "app.py",
     "methods":
       [
         {
