--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -14,13 +14,14 @@
     "diskspace": "^1.0.3",
     "express": "~4.13.1",
     "external-ip": "^0.2.4",
-    "ip": "^1.1.3",
+    "ip": "^1.1.4",
     "jade": "~1.11.0",
     "lodash": "^4.17.2",
     "mkdirp": "^0.5.1",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "mysql": "^2.12.0",
+    "public-ip": "^2.0.1",
     "q": "^1.4.1",
     "request": "^2.69.0",
     "serve-favicon": "~2.3.0",
