--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -9,6 +9,7 @@
     "async": "^2.0.0-rc.4",
     "aws-sdk": "^2.2.41",
     "body-parser": "~1.13.2",
+    "connect-timeout": "^1.9.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "diskspace": "^1.0.3",
