install memory streams

--- a/production-map-base-agent/package.json
+++ b/production-map-base-agent/package.json
@@ -19,6 +19,7 @@
     "ip": "^1.1.4",
     "jade": "~1.11.0",
     "lodash": "^4.17.2",
+    "memory-streams": "^0.1.2",
     "mkdirp": "^0.5.1",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
