PMG-341 agent should send public ip on setup install public-ip

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "multer": "^1.3.0",
+    "public-ip": "^2.4.0",
     "q": "^1.5.1",
     "request": "^2.83.0",
     "shelljs": "^0.8.1",
