--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "q": "^1.5.1",
     "request": "^2.83.0",
     "shelljs": "^0.8.1",
+    "socket.io-client": "^2.0.4",
     "streams": "^0.1.0",
     "superagent": "^3.8.2",
     "unzip": "^0.1.11",
