--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ProductionMap/PM-agent#readme",
   "dependencies": {
+    "del": "3.0.0",
     "diskspace": "2.0.0",
     "express": "4.16.2",
     "express-winston": "2.5.0",
@@ -28,7 +29,7 @@
     "minimist": "1.2.0",
     "mkdirp": "0.5.1",
     "multer": "1.3.0",
-    "node-unzip-2": "0.2.7",
+    "unzipper": "0.9.4",
     "public-ip": "2.4.0",
     "q": "1.5.1",
     "request": "2.83.0",
