--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node core/src/app.js --PORT=9292",
     "dev": "nodemon core/src/app.js --PORT=9292 --ignore './libs/'",
+    "windows-service": "node windows-service.js",
     "spec": "speculate --name=kaholo-agent"
   },
   "repository": {
