--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node core/src/app.js --PORT=9292",
+    "start": "node core/src/app.js --SERVER_URL=$SERVER_URL --PORT=$PORT",
     "dev": "nodemon core/src/app.js --PORT=9292 --ignore './libs/'",
     "windows-service": "node windows-service.js",
     "spec": "speculate --name=kaholo-agent"
