* Refactor almost entire agent * change plugins installation and loading mechanisms * change all services and controllers to use classes * Reorder files structure * Fix scripts * Fix Dockerfile * use environment variables instead of config.json * remove key file and use only .conf file

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ project
 .idea/*
 static_cdn/
 package-lock.json
-*.pm
+/.vscode
 
 # Ignore npm/yarn debug log
 npm-debug.log
@@ -56,3 +56,5 @@ private.ts
 *.service
 SOURCES
 SPECS
+
+kaholo-agent.conf
