--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "kaholo-agent",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "Agent for Kaholo",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node core/src/app.js --SERVER_URL=$SERVER_URL --PORT=$PORT",
-    "dev": "nodemon core/src/app.js --PORT=9292 --ignore './libs/'",
-    "windows-service": "node windows-service.js",
+    "start": "node app.js",
+    "install:windows": "node service-windows.js",
+    "install:osx": "node service-mac.js",
     "spec": "speculate --name=kaholo-agent"
   },
   "repository": {
@@ -21,24 +21,21 @@
   },
   "homepage": "https://github.com/Kaholo/kaholo-agent#readme",
   "dependencies": {
-    "del": "3.0.0",
     "diskspace": "2.0.0",
-    "express": "4.16.2",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
     "express-winston": "2.5.0",
-    "external-ip": "1.3.1",
+    "fs-extra": "9.0.0",
     "ip": "1.1.5",
-    "memory-streams": "0.1.3",
-    "minimist": "1.2.0",
     "mkdirp": "0.5.1",
     "multer": "1.3.0",
-    "unzipper": "0.9.4",
+    "node-mac": "^0.1.8",
     "public-ip": "2.4.0",
-    "q": "1.5.1",
     "request": "2.83.0",
     "shelljs": "0.8.1",
     "socket.io-client": "2.0.4",
-    "streams": "0.1.0",
     "superagent": "3.8.2",
+    "unzipper": "0.9.4",
     "winston": "2.4.0"
   },
   "devDependencies": {
