--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
     "speculate": "1.7.4"
   },
   "spec": {
-    "nodeVersion": "> 10.13.0"
+    "nodeVersion": "> 10.13.0",
+    "post": [
+      "mkdir -p /etc/kaholo-agent",
+      "cp /usr/lib/kaholo/kaholo-agent.conf.example /etc/kaholo-agent/kaholo-agent.conf"
+    ]
   }
 }
