--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "nodeVersion": "> 10.13.0",
     "post": [
       "mkdir -p /etc/kaholo-agent",
-      "[[ ! -f /etc/kaholo-agent/kaholo-agent.conf ]] && cp /usr/lib/kaholo-agent/kaholo-agent.conf.example /etc/kaholo-agent/kaholo-agent.conf"
+      "if [ ! -f /etc/kaholo-agent/kaholo-agent.conf ]; then",
+      "cp /usr/lib/kaholo-agent/kaholo-agent.conf.example /etc/kaholo-agent/kaholo-agent.conf",
+      "fi"
     ]
   }
 }
