--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaholo-agent",
-  "version": "1.3.4",
+  "version": "1.3.5",
   "description": "Agent for Kaholo",
   "main": "index.js",
   "scripts": {
@@ -35,6 +35,7 @@
     "socket.io-client": "2.0.4",
     "superagent": "3.8.2",
     "unzipper": "0.9.4",
+    "uuid": "8.3.1",
     "winston": "3.3.3"
   },
   "devDependencies": {
