--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Agent for Kaholo",
   "main": "index.js",
   "scripts": {
+    "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "nodemon",
     "install:windows": "node service-windows.js",
     "install:osx": "node service-mac.js",
     "spec": "speculate --name=kaholo-agent"
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/Kaholo/kaholo-agent#readme",
   "dependencies": {
+    "amqplib": "^0.6.0",
     "diskspace": "2.0.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
@@ -39,7 +41,16 @@
     "winston": "3.3.3"
   },
   "devDependencies": {
-    "speculate": "1.7.4"
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
+    "@types/node": "^14.0.5",
+    "typescript": "^3.9.3",
+    "nodemon": "^2.0.6",
+    "rimraf": "^3.0.2",
+    "speculate": "1.7.4",
+    "ts-node": "^9.0.0"
   },
   "spec": {
     "nodeVersion": "> 10.13.0",
