--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "kaholo-agent",
   "version": "1.3.5",
   "description": "Agent for Kaholo",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "build": "rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon",
-    "install:windows": "node service-windows.js",
-    "install:osx": "node service-mac.js",
+    "start:dev": "nodemon",
+    "start": "npm run build && node ./build/app.js",
+    "install:windows": "npm run build && node ./build/service-windows.js",
+    "install:osx": "npm run build && node ./build/service-mac.js",
     "spec": "speculate --name=kaholo-agent"
   },
   "repository": {
@@ -45,12 +46,14 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
+    "@types/express": "^4.17.9",
     "@types/node": "^14.0.5",
-    "typescript": "^3.9.3",
     "nodemon": "^2.0.6",
     "rimraf": "^3.0.2",
     "speculate": "1.7.4",
-    "ts-node": "^9.0.0"
+    "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.3"
   },
   "spec": {
     "nodeVersion": "> 10.13.0",
