--- a/package.json
+++ b/package.json
@@ -48,11 +48,16 @@
     "@babel/preset-typescript": "^7.9.0",
     "@types/express": "^4.17.9",
     "@types/node": "^14.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "nodemon": "^2.0.6",
+    "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
     "speculate": "1.7.4",
     "ts-node": "^9.0.0",
-    "tslint": "^6.1.3",
     "typescript": "^3.9.3"
   },
   "spec": {
