--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Agent for Kaholo",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest --runInBand tests/*",
+    "install:windows": "node service-windows.js",
+    "install:osx": "node service-mac.js",
+    "spec": "speculate --name=kaholo-agent"
   },
   "repository": {
     "type": "git",
@@ -36,7 +39,12 @@
     "uuid": "8.3.1",
     "winston": "3.3.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
+    "jest-environment-node": "^26.6.2",
+    "supertest": "^6.0.1"
+  },
   "spec": {
     "nodeVersion": "> 10.13.0",
     "post": [
