--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Agent for Kaholo",
   "main": "app.ts",
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "build": "NODE_ENV=\"production\" rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon",
-    "start": "node ./build/app.js"
+    "start": "NODE_ENV=\"production\" node build/app.js"
   },
   "repository": {
     "type": "git",
