--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,5 +20,6 @@
     "baseUrl": "./",
     "module": "es2020",
     "resolveJsonModule": true  
-  }
+  },
+  "exclude": ["node_modules", "libs"]
 }
