--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Agent for Kaholo",
   "main": "app.ts",
   "scripts": {
-    "build": "rimraf ./build && tsc",
+    "build": "NODE_ENV=\"production\" rimraf ./build && tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon",
-    "start": "NODE_ENV=\"production\" node build/app.js"
+    "start": "npm run build && node ./build/app.js",
+    "install:windows": "npm run build && node ./build/service-windows.js",
+    "install:osx": "npm run build && node ./build/service-mac.js",
+    "spec": "speculate --name=kaholo-agent"
   },
   "repository": {
     "type": "git",
@@ -43,7 +46,6 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
-    "@types/amqplib": "^0.5.16",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.10",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
@@ -54,6 +56,7 @@
     "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "speculate": "2.1.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.1.2"
   },
