--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ project
 /.idea/
 .idea/*
 static_cdn/
+package-lock.json
 /.vscode
-/build
 
 # Ignore npm/yarn debug log
 npm-debug.log
@@ -33,6 +33,7 @@ Desktop.ini
 
 # npm
 node_modules
+package-lock.json
 *.log
 *.gz
 
