--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "uuid": "8.3.1",
     "winston": "3.3.3"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "spec": {
     "nodeVersion": "> 10.13.0",
     "post": [
