--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Kaholo/kaholo-agent#readme",
   "dependencies": {
+    "amqplib": "^0.6.0",
     "diskspace": "2.0.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
