--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --runInBand tests/*"
+    "test": "jest --runInBand tests/unit-tests/*"
   },
   "repository": {
     "type": "git",
