--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaholo-agent",
-  "version": "1.3.6",
+  "version": "1.3.8",
   "description": "Agent for Kaholo",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "multer": "1.3.0",
     "public-ip": "2.4.0",
     "request": "2.88.2",
+    "rimraf": "^3.0.2",
     "shelljs": "0.8.1",
     "socket.io-client": "2.0.4",
     "superagent": "3.8.2",
