--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaholo-agent",
-  "version": "2.0.0",
+  "version": "1.3.5",
   "description": "Agent for Kaholo",
   "main": "app.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "author": "Kaholo team",
   "license": "ISC",
   "dependencies": {
+    "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.6.0",
     "diskspace": "2.0.0",
     "dotenv": "8.2.0",
@@ -24,7 +25,6 @@
     "request": "2.88.2",
     "rimraf": "^3.0.2",
     "shelljs": "0.8.1",
-    "socket.io-client": "2.0.4",
     "superagent": "3.8.2",
     "unzipper": "0.9.4",
     "uuid": "8.3.1",
