--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaholo-agent",
-  "version": "2.1.2",
+  "version": "1.3.5",
   "description": "Agent for Kaholo",
   "main": "app.js",
   "scripts": {
@@ -13,6 +13,7 @@
   "dependencies": {
     "amqp-connection-manager": "^3.2.2",
     "amqplib": "^0.6.0",
+    "decache": "^4.6.1",
     "diskspace": "2.0.0",
     "dotenv": "8.2.0",
     "express": "4.17.1",
