--- a/kaholo-agent.conf.example
+++ b/kaholo-agent.conf.example
@@ -1,11 +1,8 @@
-PORT=8090
 SERVER_URL=http://localhost:3000
 AGENT_KEY=
 AGENT_NAME=
-AMQP_HOST=localhost
-AMQP_PORT=5671
-AMQP_USER=twiddlebugs
-AMQP_PASSWORD=twiddlebugs
-AMQP_RESULT_QUEUE=actions-outcome
+AMQP_URI_ACTIONS=amqp://twiddlebugs:twiddlebugs@localhost:5672/actions
+AMQP_URI_RESULTS=amqp://twiddlebugs:twiddlebugs@localhost:5672/results
+AMQP_RESULT_QUEUE=Action/Execution/TwiddlebugResult
 AMQP_CERT_PATH=./rabbitmq/prerequisites/certs/client_certificate.crt
 AMQP_KEY_PATH=./rabbitmq/prerequisites/certs/client_key.pem
