--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
   "name": "kaholo-agent",
-  "version": "2.1.5",
+  "version": "6.2.0",
   "description": "Agent for Kaholo",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --runInBand tests/unit-tests/*",
-    "dev": "NODE_ENV=dev nodemon app.js"
+    "test": "AGENT_KEY=testkey jest --runInBand tests/unit-tests/*",
+    "dev": "NODE_ENV=dev nodemon --inspect=0.0.0.0:9333 app.js",
+    "prepare-public-repo": "./prepare-public-repo.sh"
   },
   "author": "Kaholo team",
   "license": "ISC",
   "dependencies": {
-    "amqp-connection-manager": "^4.1.3",
-    "amqplib": "^0.9.0",
+    "@kaholo/shared": "file:shared",
     "decache": "^4.6.1",
     "diskspace": "2.0.0",
     "dotenv": "8.2.0",
-    "express": "4.17.1",
-    "express-winston": "4.0.3",
+    "extract-zip": "^2.0.1",
     "fs-extra": "9.0.0",
-    "ip": "1.1.5",
+    "get-port": "^5.1.1",
     "mkdirp": "1.0.4",
-    "multer": "1.3.0",
-    "public-ip": "2.4.0",
-    "request": "2.88.2",
+    "node-fetch": "^2.6.7",
+    "node-os-utils": "1.3.7",
     "rimraf": "^3.0.2",
     "superagent": "3.8.2",
-    "unzipper": "0.9.4",
     "uuid": "8.3.1",
     "winston": "3.3.3"
   },
@@ -34,14 +31,19 @@
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "jest-environment-node": "^26.6.2",
-    "nodemon": "2.0.16",
+    "nodemon": "3.0.1",
     "supertest": "^6.0.1"
   },
   "nodemonConfig": {
     "ignore": [
+      "**/node_modules/*",
       "**/uploads/*",
       "**/libs/*",
       "**/tmp/*"
+    ],
+    "ext": "js,json,ts",
+    "ignoreRoot": [
+      ".git"
     ]
   }
 }
