--- a/shared/package.json
+++ b/shared/package.json
@@ -24,9 +24,11 @@
     "amqp-connection-manager": "^3.7.0",
     "amqplib": "^0.8.0",
     "ioredis": "^5.1.0",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "mongoose": "5.13.20",
     "uuid": "8.3.2",
+    "validator": "13.11.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -34,11 +36,13 @@
     "@types/amqplib": "^0.8.2",
     "@types/ioredis": "^4.28.3",
     "@types/jest": "^27.0.2",
+    "@types/js-yaml": "^4.0.6",
     "@types/lodash": "^4.14.178",
     "@types/mongoose": "5.11.97",
     "@types/node": "16.11.7",
     "@types/superagent": "^4.1.14",
     "@types/uuid": "8.3.3",
+    "@types/validator": "13.11.1",
     "@typescript-eslint/eslint-plugin": "5.4.0",
     "@typescript-eslint/parser": "5.4.0",
     "eslint": "8.3.0",
